# kaggle

./: .gitignore  pyproject.toml
competitions/santa-2025/: README.md  sample_submission.csv
competitions/santa-2025/simulated-annealing/: Cargo.toml  README.md
competitions/santa-2025/simulated-annealing/src/: main.rs
competitions/santa-2025/submissions/: 71.943853935274.csv  sample_submission.csv
competitions/santa-2025/visualizer/: Cargo.toml
competitions/santa-2025/visualizer/src/: main.rs
